<resources>
    <string name="app_name">LearnIt</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="sign_out">Sign Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_courses">My Courses</string>
    <string name="select_course">Select Course</string>
    <string name="take_quiz">Take Quiz</string>
    <string name="a_short_course_description">A short Course Description</string>
    <string name="topic">Topic</string>
    <string name="name_of_the_quiz">Name of the Quiz</string>
    <string name="description_about_the_quiz">Description about the Quiz</string>
    <string name="title_activity_video_notes">VideoNotesActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="notes">Notes</string>
    <string name="title_activity_quiz">Quiz</string>
    <string name="please_select_from_below_options">Please select from Below Options</string>
    <string name="wrong_ans">Wrong Answer</string>
    <string name="done">Done</string>
    <string name="view_answer">View Answer</string>
    <string name="try_again">Try Again</string>
    <string name="save">Save</string>
    <string name="my_notes">My Notes</string>
    <string name="pass">PASS</string>
    <string name="_30_30">30/30</string>
    <string name="_30">30</string>
    <string name="_01_00">01:00</string>
    <string name="todo">TODO</string>
    <string name="_0_30">0/30</string>
    <string name="_00_30">00:30</string>
    <string name="textview">TextView</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="_10">10</string>
    <string name="question_1">Question 1</string>
    <string name="_1">1</string>
</resources>
