<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context=".ui.ResultActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">


        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>
    
    <LinearLayout
        android:layout_margin="8dp"
        android:weightSum="4"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_access_time_black_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo" />

         <TextView
             android:id="@+id/txt_time"
             android:text="@string/_01_00"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_result"
                android:text="@string/pass"
                android:layout_marginStart="20dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:padding="16dp"
                android:background="@drawable/border_bg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_right_answer"
                android:text="@string/_30_30"
                android:textStyle="bold"
                android:textSize="24sp"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_filter_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_format_list_bulleted_black_24dp"
            android:text="@string/_30"
            />

        <Button
            android:id="@+id/btn_filter_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_check_black_24dp"
            android:text="@string/_30"
            />

        <Button
        android:id="@+id/btn_filter_wrong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_clear_black_24dp"
        android:text="@string/_30"
        />

        <Button
            android:id="@+id/btn_filter_no_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_error_outline_black_24dp"
            android:text="@string/_30"
            />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_result"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>